# usb_flow_analysis

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.cursor/plans/: usb_anomaly_learning_tool_0f5caaa0.plan.md
src/usb_analysis/: __init__.py  cli.py  filters.py  flow_timeline.py  models.py  pcap.py  pipeline.py  serialization.py  stream_text.py  summary.py  trezor.py  usb_mmap.py
src/usb_analysis.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/usb_analysis/analysis/: __init__.py  aggregator.py  baseline.py  causal.py  config.py  crc_util.py  detectors.py  engine.py  exporter.py  features.py  flow_builder.py  parser.py  rules.py  scorer.py  segmenter.py  store.py
src/usb_analysis/web/: __init__.py  app.py
src/usb_analysis/web/static/: app.js  detail.js  flow.js  i18n.js  index.html  style.css  timeline.js
tests/: smoke_test.py  test_aggregator.py  test_causal.py  test_crc.py  test_detectors.py  test_exporter.py  test_features.py  test_flow_builder.py  test_flow_timeline.py  test_parse_mmap.py  test_rules.py  test_scorer.py  test_segmenter.py  test_web.py
tests/fixtures/: generate_synthetic_pcap.py  sample_mmap.pcap
